@@ -5,7 +5,7 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import { UIEvent } from '@ephox/dom-globals';
+import { Event } from '@ephox/dom-globals';
 import Editor from 'tinymce/core/api/Editor';
 
 const fireSkinLoaded = (editor: Editor) => editor.fire('SkinLoaded');
@@ -16,9 +16,9 @@ const fireResizeEditor = (editor: Editor) => editor.fire('ResizeEditor');
 
 const fireBeforeRenderUI = (editor: Editor) => editor.fire('BeforeRenderUI');
 
-const fireResizeContent = (editor: Editor, e: UIEvent) => editor.fire('ResizeContent', e);
+const fireResizeContent = (editor: Editor, e?: Event) => editor.fire('ResizeContent', e);
 
-const fireScrollContent = (editor: Editor, e: UIEvent) => editor.fire('ScrollContent', e);
+const fireScrollContent = (editor: Editor, e: Event) => editor.fire('ScrollContent', e);
 
 const fireTextColorChange = (editor: Editor, data: { name: string; color: string }) => editor.fire('TextColorChange', data);
 
